# gryphon-bot

./: .envrc  .ghcid  .gitignore  .hlint.yaml  CHANGELOG.md  README.md  default.nix  flake.nix  floskell.json  gryphon-bot.cabal  hie.yaml
app/: Main.hs
nix-overrides/: HTF.nix  calamity.nix  generic-override-aeson.nix  happy.nix  haskell-src.nix  primitive-extras.nix  stm-containers.nix  stm-hamt.nix
src/: Types.hs
src/GryphonBot/: Bot.hs  Utils.hs
src/GryphonBot/Commands/: LastCrons.hs  QuestProgress.hs  Types.hs  Utils.hs
src/Habitica/: Api.hs  Request.hs  Types.hs
src/Web/: Server.hs
