cabal-version:       2.4
name:                gryphon-bot
version:             0.0.0.0
synopsis:            Discord bot for the Habitican Evolution party on Habitica
description:         Discord bot for the Habitican Evolution party on Habitica
license:             BSD-3-Clause
license-file:        LICENSE
author:              Rob Whitaker
maintainer:          Rob Whitaker <dev@robwhitaker.com>
copyright:           2021 Rob Whitaker
category:            Application
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md

common common-options
  build-depends:       base >= 4.13.0.0
                     , relude
                     , optics
                     , polysemy
                     , calamity
                     , di
                     , di-polysemy
                     , aeson
                     , unagi-chan
                     , req
                     , servant-server
                     , uuid
                     , time
                     , containers

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)

  other-modules:       Habitica.Types

  default-extensions:  MultiWayIf
                     , DataKinds
                     , FlexibleContexts
                     , GADTs
                     , LambdaCase
                     , PolyKinds
                     , RankNTypes
                     , ScopedTypeVariables
                     , TypeApplications
                     , TypeOperators
                     , TypeFamilies
                     , OverloadedStrings
                     , OverloadedLabels
                     , DerivingStrategies
                     , GeneralizedNewtypeDeriving
                     , RecordWildCards
                     , ConstraintKinds
                     , DeriveGeneric
                     , StandaloneDeriving
                     , TupleSections
                     , ViewPatterns

  ghc-options:         -Wall
                       -Wcompat
                       -fwarn-tabs
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Werror
                       -Wwarn=unused-imports
                       -Wwarn=unused-local-binds
                       -Wwarn=unused-matches
                       -Wwarn=unused-do-bind
                       -Wwarn=deprecations
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
                       -Wwarn=redundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wwarn=missing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

executable gryphon-bot
  import:              common-options
  hs-source-dirs:      app
                     , src
  main-is:             Main.hs

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -O2
                       -flate-specialise
                       -fspecialise-aggressively
